<resources>
    <string name="app_name">Primes Pillar</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="menu_pause_resume">Pause</string>
    <string name="seed_value">"Seed Value (0 - 214748364)"</string>
    <string name="delay_millis">"Delay (1 - 5000)"</string>
    <string name="char_size">"Character Size (1 - 100)"</string>
    <string name="display_char">"Display Character"</string>
    <string name="foreground_colour">"Character Colour"</string>
    <string name="background_colour">"Background Colour"</string>
    <string name="reset_defaults">"Reset Default Values"</string>
    <string name="help_text">"The first number displayed on the action bar corresponds to the multiple of 10 for which all the units (1, 3, 7 and 9) when added, will all be prime numbers.\n\nFor example if 208 is displayed on the action bar, then the numbers 2081, 2083, 2087 and 2089 will all be primes.\n\nThe next number displayed after the colon (:) is the currently running line (multiple of 10) that is passing at the top of the display.\n\nTapping on the main screen toggles Action Bar."</string>
    <string name="start_text_p1">"This app continuously marks and displays the prime numbers that occur for every 10 numbers in a row.\n\nAs prime numbers end only with the digits 1, 3, 7 or 9, only the numbers ending with these 4 digits are considered for every line.\n\nFor example, from numbers 11 to 20 there are 4 prime numbers (11, 13, 17 and 19), so the first line is represented with four stars as below.</string>
    <string name="line_1">"\n****\n"</string>
    <string name="start_text_p2">"Where the 1st star corresponds to 11, 2nd star to 13, 3rd star to 17 and the 4th star to 19.\n\nFor the next line from numbers 21 to 30 there are only two primes, 23 and 29.\n\nSo they are represented in the next line as"</string>
    <string name="line_2">"\nspace * space *\n"</string>
    <string name="start_text_p3">"Leaving the spaces for 1's position and 7's position.\n\nMarking down the prime numbers with * and non primes with spaces like this  form beautiful patterns and can be viewed as a continuous stream of floating stars like a pillar, and hence the name of the app.\n\nSo enjoy watching \"Ever Changing and Never Ending\" Pillar of Primes."</string>

</resources>