<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSeedValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seed_value" />

            <EditText
                android:id="@+id/editTextNumberSeedValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewDelay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/delay_millis" />

            <EditText
                android:id="@+id/editTextNumberDelay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewDisplayChar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/display_char" />

            <EditText
                android:id="@+id/editTextDisplayChar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewCharSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/char_size" />

            <EditText
                android:id="@+id/editTextDecimalCharSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewForeground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/foreground_colour" />

            <EditText
                android:id="@+id/editTextForeground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reset_defaults" />

        </LinearLayout>

    </FrameLayout>
</LinearLayout>